5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1839_2222.log
== TEST (2019-06-29 22:45:17) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite a matriz", 3, "X", 3, ": ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:45:30) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite a matriz", n, "X", n, ": ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:47:55) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + n + " X " + n + " : ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:48:14) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 22:56:29) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for in j in range(n):
		if(i == j):
			s1 += m[i,j]
		elif(i + j == n + 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
0.729546
-- ERROR:
  File "/home/codebench/codes/1839/2222/main.py", line 10
    for in j in range(n):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:57:15) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for in j in range(n):
		if(i == j):
			s1 += m[i,j]
		elif(i + j == n + 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
File "XXXX", line 10
    for in j in range(n):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 22:57:24) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		elif(i + j == n + 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.10638
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 5, in <module>
    while(shape(m)[0] != n or shape(m)[1] != n):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:57:25) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		elif(i + j == n + 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:57:31) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		elif(i + j == n + 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:02:35) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		elif(i + j == n + 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 11:11:49) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		elif(i + j == n + 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.18981
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 5, in <module>
    while(shape(m)[0] != n or shape(m)[1] != n):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 11:12:00) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = 0
s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		elif(i + j == n + 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
0.99339
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 5, in <module>
    while(shape(m)[0] != n or shape(m)[1] != n):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 11:12:09) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = 0
s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		elif(i + j == n + 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 11:16:45) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		elif(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.1603
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 5, in <module>
    while(shape(m)[0] != n or shape(m)[1] != n):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 11:16:48) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		elif(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 11:27:12) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		elif(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.18882
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 5, in <module>
    while(shape(m)[0] != n or shape(m)[1] != n):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 11:27:45) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		elif(i + j == n + 2):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.19653
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 5, in <module>
    while(shape(m)[0] != n or shape(m)[1] != n):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 11:27:53) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		elif(i + j == n - 2):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.15482
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 5, in <module>
    while(shape(m)[0] != n or shape(m)[1] != n):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 11:29:38) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.00965
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 5, in <module>
    while(shape(m)[0] != n or shape(m)[1] != n):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 11:29:53) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 11:31:42) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 11:31:59) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.08639
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 5, in <module>
    while(shape(m)[0] != n or shape(m)[1] != n):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 11:32:38) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
0.979425
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 5, in <module>
    while(shape(m)[0] != n or shape(m)[1] != n):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 11:32:50) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 11:33:53) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
while(shape(m)[0] != n or shape(m)[1] != n):
	m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
0.96297
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 5, in <module>
    while(shape(m)[0] != n or shape(m)[1] != n):
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 11:45:37) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
#m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
#while(shape(m)[0] != n or shape(m)[1] != n):
	#m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)
m = zeros((n, n), dtype = int)
for i in range(n):
	s = input()
	v = s.split(" ")
	for j in range(n):
		m[i,j] = v[j]

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 11:46:16) 
-- CODE:
from numpy import*

n = int(input("Dimensao da matriz quadrada: "))
#m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")))
#while(shape(m)[0] != n or shape(m)[1] != n):
	#m = array(eval(input("Digite uma matriz " + str(n) + " X " + str(n) + " : ")), dtype = int)
m = zeros((n, n), dtype = int)
for i in range(n):
	s = input()
	v = s.split(" ")
	for j in range(n):
		m[i,j] = v[j]

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
0.939331
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 12, in <module>
    m[i,j] = v[j]
IndexError: list index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 11:47:13) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n, n), dtype = int)
for i in range(n):
	s = input()
	v = s.split(" ")
	for j in range(n):
		m[i,j] = v[j]

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n + 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.11321
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 9, in <module>
    m[i,j] = v[j]
IndexError: list index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 11:47:44) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n, n), dtype = int)
for i in range(n):
	s = input()
	v = s.split(" ")
	for j in range(n):
		m[i,j] = v[j]

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n + 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.13275
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 9, in <module>
    m[i,j] = v[j]
IndexError: list index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 11:48:00) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n, n), dtype = int)
for i in range(n):
	s = input()
	v = s.split(" ")
	for j in range(n):
		m[i,j] = v[j]

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n + 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 11:48:52) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n, n), dtype = int)
for i in range(n):
	s = input()
	v = s.split(" ")
	for j in range(n):
		m[i,j] = v[j]

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.31009
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 9, in <module>
    m[i,j] = v[j]
IndexError: list index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 11:48:53) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n, n), dtype = int)
for i in range(n):
	s = input()
	v = s.split(" ")
	for j in range(n):
		m[i,j] = v[j]

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 11:54:42) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n, n), dtype = int)
for i in range(n):
	s = input()
	v = s.split(" ")
	for j in range(n):
		m[i,j] = v[j]

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.08611
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 9, in <module>
    m[i,j] = v[j]
IndexError: list index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:41:10) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n, n), dtype = int)
for i in range(n):
	s = input()
	v = s.split(" ")
	for j in range(n):
		m[i,j] = v[j]

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 11:40:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz=array(eval(input()))
    for i in range(matriz[0,0]:
        soma=soma+x[i][i]-x[3-i-1][i]
    return soma
matriz=[]
for i in range(0,3):
    matriz.append(0)
    matriz[i]=[]
    for j in range(0,3):
        a=input('Numero: ')
        matriz[i].append(a)
print matriz
print'Soma das diagonais:',somadiag(matriz)
-- EXECUTION TIME:
0.843877
-- ERROR:
  File "/home/codebench/codes/1839/2222/main.py", line 5
    for i in range(matriz[0,0]:
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:07:52) 
-- CODE:
# Esse código tá errado seja lá quem tenha feito. to sem tempo pra consertar
from numpy import*

matriz=array(eval(input()))
    for i in range(matriz[0,0]:
        soma=soma+x[i][i]-x[3-i-1][i]
    return soma
matriz=[]
for i in range(0,3):
    matriz.append(0)
    matriz[i]=[]
    for j in range(0,3):
        a=input('Numero: ')
        matriz[i].append(a)
print matriz
print'Soma das diagonais:',somadiag(matriz)
-- ERROR:
File "XXXX", line 5
    for i in range(matriz[0,0]:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:23:06) 
-- CODE:
# Esse código tá errado seja lá quem tenha feito. to sem tempo pra consertar
from numpy import*

n = int(input())
for i in range(n):
	s = input()

m = zeros((n,n), dtype = int)
for i in range(n):
	m[i,:] = s.split(" ")

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:24:20) 
-- CODE:
# Esse código tá errado seja lá quem tenha feito. to sem tempo pra consertar
from numpy import*

m = zeros((n,n), dtype = int)
n = int(input())
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:24:33) 
-- CODE:
# Esse código tá errado seja lá quem tenha feito. to sem tempo pra consertar
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:49:59) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 12:50:24) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.19315
-- TEST CASE 1:
---- input:
3
16 8 9
4 1 3
8 7 8
---- correct output:
7
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:50:33) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 12:51:08) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.05138
-- TEST CASE 1:
---- input:
3
16 8 9
4 1 3
8 7 8
---- correct output:
7
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:51:33) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

print(m)
s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:56:40) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 12:58:18) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.27167
-- TEST CASE 1:
---- input:
3
16 8 9
4 1 3
8 7 8
---- correct output:
7
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:58:59) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 12:59:03) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
0.967987
-- TEST CASE 1:
---- input:
3
16 8 9
4 1 3
8 7 8
---- correct output:
7
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 13:00:08) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")
	
print(m[0,0].id)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
0.920174
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 9, in <module>
    print(m[0,0].id)
AttributeError: 'numpy.int64' object has no attribute 'id'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 13:00:09) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")
	
print(m[0,0].id)

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 13:00:38) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
0.984189
-- TEST CASE 1:
---- input:
3
16 8 9
4 1 3
8 7 8
---- correct output:
7
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 13:01:41) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1)
print(s2)
print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 13:13:08) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.12746
-- TEST CASE 1:
---- input:
3
16 8 9
4 1 3
8 7 8
---- correct output:
7
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 13:13:09) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 13:14:16) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1.id())
print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 13:15:41) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = int(s.split(" "))

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 13:22:17) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	st = s.split(" ")
	for j in range(n):
		st[j] = int(st[j])
	m[i,:] = st

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.16758
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1839/2222/main.py", line 9, in <module>
    st[j] = int(st[j])
IndexError: list index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 13:22:18) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	st = s.split(" ")
	for j in range(n):
		st[j] = int(st[j])
	m[i,:] = st

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 13:24:28) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
1.07098
-- TEST CASE 1:
---- input:
3
16 8 9
4 1 3
8 7 8
---- correct output:
7
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 13:24:30) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 13:25:06) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 13:25:22) 
-- CODE:
from numpy import*

n = int(input())
m = zeros((n,n), dtype = int)
for i in range(n):
	s = input()
	m[i,:] = s.split(" ")

s1 = s2 = 0
for i in range(n):
	for j in range(n):
		if(i == j):
			s1 += m[i,j]
		if(i + j == n - 1):
			s2 += m[i,j]

print(s1-s2)
-- EXECUTION TIME:
0.965466
-- TEST CASE 1:
---- input:
3
16 8 9
4 1 3
8 7 8
---- correct output:
7
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
